# FSDS_NOV_deepCNNClassifier

./: .gitignore  LICENSE  README.md  dvc.yaml  init_setup.sh  params.yaml  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py  tox.ini
configs/: config.yaml
prediction_service/: app.py
research/: .gitignore  st_01.ipynb  st_02.ipynb  st_03.ipynb  st_04.ipynb  st_05.ipynb  st_05_trials.ipynb  trials.ipynb
src/deepClassifier/: __init__.py
src/deepClassifier/components/: data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callback.py  training.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/constants/: __init__.py
src/deepClassifier/entity/: config_entity.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
src/deepClassifier/utils/: common.py
tests/integration/: test_data_ingestion.py
tests/unit/: test_data_ingestion.py  test_utils.py
