[metadata] #contains info like license, programming language, os etc
license = MIT
license_file = LICENSE
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires = 
    ensure == 1.0.2 # mention third party libs which are must for working of our package
python_requires = >=3.7 #means creates python version equal to or greater than 3.7. Here, for lower versions our package will not work

[options.extras_require]
testing = # packages required for testing our application
    pytest>=7.1.3 # helps to run unit test and integration test
    mypy>=0.971 # helps if there is any typing error
    flake8>=5.0.4 # to see if we have done any mistakes in application. e.g extra spaces not needed are highlighted by this package
    tox>=3.25.1 # helps to create different working environment and to test application locally
    black>=22.8.0 #package helps to follow standard python structure

[options.package_data] #means where are our files
deepClassifier = py.typed

[flake8] # to see if we have done any mistakes in application. e.g extra spaces not needed are highlighted by this package
max-line-length = 160
exclude = __init__.py
